# Labor3_Template_FERTIG

./: README.md  board_setup.fzz  config.cmake  external  lib
lab3/: CMakeLists.txt
lab3/src/: CMakeLists.txt  clock.c  clock.h  clock_cursor.c  clock_cursor.h  clock_dcf77.c  clock_dcf77.h  clock_gui.c  clock_gui.h  clock_image.c  clock_imu.c  clock_imu.h  clock_time.c  clock_time.h
